--- a/ini_configuration_flattener_cli/src/main/BUILD
+++ b/ini_configuration_flattener_cli/src/main/BUILD
@@ -8,9 +8,11 @@ java_binary(
         "//file_processor/src/main:file_processor",
         "//ini_config_flatten_processor/src/main:ini_config_flatten_processor",
         "@org_slf4j_slf4j_api//jar",
-        "@ch_qos_logback_logback_classic//jar",
-        "@ch_qos_logback_logback_core//jar",
         "@commons_codec_commons_codec//jar",
         "@org_springframework_spring_core//jar"
+    ],
+    runtime_deps = [
+        "@ch_qos_logback_logback_classic//jar",
+        "@ch_qos_logback_logback_core//jar"
     ]
 )
