--- a/src/test/java/io/github/hcoona/ini/BUILD
+++ b/src/test/java/io/github/hcoona/ini/BUILD
@@ -3,11 +3,11 @@ load("//:junit5.bzl", "java_junit5_test")
 java_junit5_test(
     name = "IniParserTest",
     srcs = [
-        "ini/IniParserTest.java",
+        "IniParserTest.java",
     ],
-    test_class = "io.github.hcoona.parser.ini.IniParserTest",
+    test_class = "io.github.hcoona.ini.IniParserTest",
     deps = [
-        "//src/main/java/io/github/hcoona/parser:ini_parser",
+        "//src/main/java/io/github/hcoona/ini:ini_parser",
     ],
     resources = [
         "//src/test/resources/ini:ini_test_cases",
