--- a/src/main/java/io/github/hcoona/ini/BUILD
+++ b/src/main/java/io/github/hcoona/ini/BUILD
@@ -8,3 +8,31 @@ java_library(
         "IniParser.java",
     ],
 )
+
+java_library(
+    name = "ini_api",
+    srcs = [
+        "IniFileObject.java",
+        "IniSectionObject.java",
+        "IniOptionObject.java",
+        "IniException.java",
+    ],
+    deps = [
+        "@org_apache_commons_commons_lang3//jar",
+    ],
+)
+
+java_library(
+    name = "ini_reader",
+    srcs = [
+        "IniReader.java",
+    ],
+    deps = [
+        ":ini_api",
+        ":ini_parser",
+    ],
+    exports = [
+        ":ini_api",
+        ":ini_parser",
+    ],
+)
