--- a/src/test/java/io/github/hcoona/ini/BUILD
+++ b/src/test/java/io/github/hcoona/ini/BUILD
@@ -14,3 +14,18 @@ java_junit5_test(
     ],
     size = "small",
 )
+
+java_junit5_test(
+    name = "IniReaderTest",
+    srcs = [
+        "IniReaderTest.java",
+    ],
+    test_class = "io.github.hcoona.ini.IniReaderTest",
+    deps = [
+        "//src/main/java/io/github/hcoona/ini:ini_reader",
+    ],
+    resources = [
+        "//src/test/resources/ini:ini_test_cases",
+    ],
+    size = "small",
+)
